@@ -1,3 +1,9 @@
+2001-07-25  Bradford Hovinen  <hovinen@ximian.com>
+
+	* prefs-widget.c (prefs_widget_init): Fix macro name
+
+	* main.c (main): Fix macro name
+
 2001-07-24  Richard Hestilow  <hestilow@ximian.com>
 	
 	* sound-properties-capplet.c (main): Pass in legacy files to
